--- a/README
+++ b/README
@@ -3,7 +3,7 @@ A sample application that uses an extended version of the routing-jms plugin wit
 A simple, but non-trivial application
  - camel route that takes a message off an oracle AQ queue
  - transacts the route with a wired transaction policy
- - deserializes using Camel's jaxb component
+ - unmarshal using Camel's jaxb component
  - persists a domain object to the same oracle schema using hibernate plugin
  - persists another domain object to a mongo db using the mongo-db plugin
 
